fix layout on mobile landscape orientation

--- a/styles/LogIn.module.scss
+++ b/styles/LogIn.module.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 10rem);
+  min-height: calc(100vh - 12rem);
+  padding-top: 4rem;
 }
 
 .title {
